# stalker

./: Cargo.toml
config/: analysis-bitflip-dc.toml  analysis-dc.toml  analysis-dsa.toml  analysis-stuck-0x00-dc.toml  analysis-stuck-0x00-dsa.toml  analysis-stuck-0xff-dc.toml  analysis-stuck-0xff-dsa.toml  platform.toml
config/experiments/: dc.yaml  dsa.yaml
config/libgcrypt/: config.toml
config/libgcrypt/injections/: aes-aesni.toml  aes-armv8.toml  aes-ecb-armv8.toml  aes-ecb.toml  aes-sse3.toml  ecdsa.toml  modes-cbc-armv8.toml  modes-cbc.toml  modes-ctr-armv8.toml  modes-ctr.toml  salsa-ecb.toml
config/libressl/: config.toml
config/libressl/injections/: aes-ecb.toml  ecdsa-sign.toml  ecdsa.toml  modes-cbc-armv8.toml  modes-cbc-vpaes.toml  modes-cbc.toml  modes-ctr-armv8.toml  modes-ctr.toml
config/mbedtls/: config.toml
config/mbedtls/injections/: aes-aesni.toml  aes-ecb.toml  aes-internal.toml  aes-setkey.toml  ecdsa-sign.toml  ecdsa.toml  modes-cbc.toml  modes-ctr.toml
config/openssl/: config.toml
config/openssl/injections/: aes-ecb.toml  ecdsa-sign.toml  ecdsa.toml  modes-cbc-armv8.toml  modes-cbc-vpaes.toml  modes-cbc.toml  modes-ctr-armv8.toml  modes-ctr.toml
examples/libgcrypt/aes/: expected.txt  main.c
examples/libgcrypt/ecdsa/: main.c
examples/libgcrypt/modes-cbc/: expected.txt  main.c
examples/libgcrypt/modes-ctr/: expected.txt  main.c
examples/libressl/aes/: expected.txt  main.c
examples/libressl/modes-cbc/: main.c
examples/libressl/modes-ctr/: main.c
examples/mbedtls/aes/: expected.txt  main.c
examples/mbedtls/ecdsa/: main.c
examples/mbedtls/modes-cbc/: main.c
examples/mbedtls/modes-ctr/: main.c
examples/openssl/ecdsa/: main.c
examples/openssl/modes-cbc/: expected.txt  main.c
examples/openssl/modes-ctr/: expected.txt
examples/openssl/pre/: Makefile  run
examples/openssl/pre/include/: evp_exps.h  raw_exps.h  utils.h
examples/openssl/pre/src/: evp_exps.c  main.c  raw_exps.c  utils.c
examples/utils/: Example.mk  print.c  print.h  run
stalker-bin/: Cargo.toml
stalker-bin/src/: cli.rs  main.rs
stalker-bin/src/executor/: analyze.rs  inject.rs  mod.rs
stalker-bin/src/generator/: exps.rs  liblocs.rs  mod.rs  mutants.rs
stalker-classifier/: Cargo.toml  generate_results.sh
stalker-classifier/examples/: deterministic_cipher.rs  digital_signature.rs
stalker-classifier/examples/config/: dc.yaml  dsa.yaml
stalker-classifier/src/: analyze.rs  contants.rs  lib.rs  parse.rs
stalker-classifier/src/effect/: dc.rs  dsa.rs  mod.rs
stalker-classifier/src/metric/: equal_by_byte.rs  mod.rs
stalker-injector/: Cargo.toml
stalker-injector/examples/: inject-dryrun.rs
stalker-injector/src/: config.rs  exec.rs  fmt.rs  lib.rs
stalker-mutator/: Cargo.toml
stalker-mutator/examples/: gen-mutants-for-symbol.rs  gen-mutants.rs
stalker-mutator/src/: lib.rs  traits.rs
stalker-mutator/src/model/: bitflip.rs  mod.rs  stuck.rs
stalker-utils/: Cargo.toml
stalker-utils/examples/: gen-liblocs.rs
stalker-utils/src/: binary.rs  config.rs  context.rs  error.rs  fmt.rs  lib.rs  loc.rs  tag.rs
stalker-utils/src/asm/: cmp.rs  error.rs  fmt.rs  inst.rs  mod.rs  parser.rs
stalker-utils/src/db/: mod.rs
