[package]
name = "stalker-bin"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serfig" = "0.1.0"
"serde" = "1.0.160"
"serde_json" = "1.0.96"
"anyhow" = "1.0.70"
stalker-utils = { path= "../stalker-utils" }
stalker-mutator = { path= "../stalker-mutator" }
stalker-injector = { path= "../stalker-injector" }
stalker-classifier = { path= "../stalker-classifier" }
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.2.1", features = ["derive"] }
rayon = "1.7.0"
indicatif = "0.17.3"
toml = "0.7.3"
