[package]
name = "stalker-classifier"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
strum = "0.24.1"
strum_macros = "0.24.3"
lazy_static = "1.4.0"
derive_more = "0.99.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
anyhow = "1.0.70"
log = "0.4.17"
