[package]
name = "stalker-injector"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stalker-utils = { path= "../stalker-utils" }
stalker-mutator = { path= "../stalker-mutator" }
anyhow = "1.0.70"
sled = "0.34.7"
log = "0.4.17"
"serde" = "1.0.160"
"serde_json" = "1.0.96"
"serde_with" = { version = "2.3.2", features = ["hex"] }
