[package]
name = "stalker-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rzpipe" = { git= "https://github.com/rizinorg/rz-pipe/" }
"serde" = "*"
"serde_json" = "*"
"serde_with" = { version = "*", features = ["hex"] }
"anyhow" = "*"
"serfig" = "*"
"nom" = "*"
"hex" = "*"
