[package]
name = "stalker-utils"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rzpipe" = { git= "https://github.com/rizinorg/rz-pipe/" }
"serde" = "1.0.159"
"serde_json" = "1.0.95"
"serde_with" = { version = "2.3.2", features = ["hex"] }
"anyhow" = "1.0.70"
"nom" = "7.1.3"
"hex" = "0.4.3"
"thiserror" = "1.0.40"
"sled" = "0.34.7"
log = "0.4.17"

[dev-dependencies]
